--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,49 @@
-/* * {
-  font-family: Arial;
-} */
+* {
+  --app-green: rgb(51, 178, 51);
+  --app-red: rgb(255, 0, 0);
+}
+
+.single-task {
+  display: flex;
+  /* width: 29.5%; */
+  border-radius: 5px;
+  padding: 10px;
+  margin-top: 10px;
+  background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+  transition: 0.2s;
+}
+
+.single-task:hover {
+  box-shadow: 0 0 5px black;
+  transform: scale(1.03);
+}
+
+h1 {
+  font-weight: 700;
+}
+
+.task-add-button:hover{
+  transform: scale(1.1);
+}
+
+h4 {
+  font-family: Roboto;
+}
+
+.edit-icon {
+  background-color: transparent;
+  color: var(--app-green);
+}
+
+.edit-icon:hover {
+  transform: scale(1.3);
+}
+
+.delete-icon {
+  background-color: transparent;
+  color: var(--app-red);
+}
+
+.delete-icon:hover {
+  transform: scale(1.3);
+}
