--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,29 @@ h4 {
 .delete-icon:hover {
   transform: scale(1.3);
 }
+
+.task-card {
+  transform: scale(0.97);
+  height: fit-content;
+}
+
+.user-image {
+  border-radius: 100%;
+}
+
+.task-description {
+  font-size: 12px;
+  color: rgb(81, 77, 77);
+  margin: 0;
+}
+
+.dropdown {
+  background-color: transparent;
+  border-radius: 10px;
+  border-bottom-color: yellow;
+  border-right-color: yellow;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  font-size: 12px;
+  font-weight: 500;
+}
